tests/errors/lex8.kt
fun main() {
    val a = '
    val b = 'ab'
}